--- a/src/_assets/css/_settings.scss
+++ b/src/_assets/css/_settings.scss
@@ -110,10 +110,10 @@ $breakpoints: (
   medium: 640px,
   large: 1024px,
   xlarge: 1200px,
-  xxlarge: 1440px,
+  xxlarge: 1600px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large);
+$breakpoint-classes: (small medium large xlarge xxlarge);
 
 // 3. The Grid
 // -----------
@@ -140,6 +140,14 @@ $header-lineheight: 1.15;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
   small: (
+    'h1': ('font-size': 42),
+    'h2': ('font-size': 22),
+    'h3': ('font-size': 19),
+    'h4': ('font-size': 18),
+    'h5': ('font-size': 17),
+    'h6': ('font-size': 16),
+  ),
+  medium: (
     'h1': ('font-size': 52),
     'h2': ('font-size': 24),
     'h3': ('font-size': 19),
@@ -148,6 +156,22 @@ $header-styles: (
     'h6': ('font-size': 16),
   ),
   large: (
+    'h1': ('font-size': 65),
+    'h2': ('font-size': 32),
+    'h3': ('font-size': 31),
+    'h4': ('font-size': 25),
+    'h5': ('font-size': 20),
+    'h6': ('font-size': 16),
+  ),
+  xlarge: (
+    'h1': ('font-size': 85),
+    'h2': ('font-size': 48),
+    'h3': ('font-size': 31),
+    'h4': ('font-size': 25),
+    'h5': ('font-size': 20),
+    'h6': ('font-size': 16),
+  ),
+  xxlarge: (
     'h1': ('font-size': 105),
     'h2': ('font-size': 48),
     'h3': ('font-size': 31),
